; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/sys/unix/extr_command.c_get_executable_path.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/sys/unix/extr_command.c_get_executable_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"/proc/self/exe\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"readlink\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_executable_path() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = load i32, i32* @PATH_MAX, align 4
  %7 = add nsw i32 %6, 1
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %2, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %3, align 8
  %11 = load i32, i32* @PATH_MAX, align 4
  %12 = call i32 @readlink(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %17

15:                                               ; preds = %0
  %16 = call i32 @perror(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  store i8* null, i8** %1, align 8
  store i32 1, i32* %5, align 4
  br label %22

17:                                               ; preds = %0
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %10, i64 %19
  store i8 0, i8* %20, align 1
  %21 = call i8* @SDL_strdup(i8* %10)
  store i8* %21, i8** %1, align 8
  store i32 1, i32* %5, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %23)
  %24 = load i8*, i8** %1, align 8
  ret i8* %24
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @readlink(i8*, i8*, i32) #2

declare dso_local i32 @perror(i8*) #2

declare dso_local i8* @SDL_strdup(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
